--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
+    "@types/express": "^4.17.13",
     "@types/jest": "^27.0.2",
     "@types/react-relay": "^11.0.2",
     "@types/relay-runtime": "^12.0.0",
