--- a/app/package.json
+++ b/app/package.json
@@ -34,6 +34,7 @@
     "jest": "^27.3.1",
     "nodemon": "^2.0.13",
     "prettier": "^2.4.1",
+    "react-test-renderer": "^17.0.2",
     "ts-node": "^10.3.0",
     "typescript": "^4.4.4"
   },
