--- a/app/package.json
+++ b/app/package.json
@@ -23,6 +23,7 @@
     "@typescript-eslint/parser": "^4.29.3",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-relay": "^12.0.0",
+    "cypress": "^8.7.0",
     "eslint": "^7.2.0",
     "eslint-config-airbnb-typescript": "^14.0.1",
     "eslint-config-next": "^11.1.2",
