--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -88,3 +88,15 @@ jobs:
           key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('.tool-versions', 'cpanfile', 'app/yarn.lock') }}
       - run: source ~/.asdf/asdf.sh
       - run: make db_unit_tests
+  build-schema-image:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: RafikFarhad/push-to-gcr-github-action@v3.0.2
+        with:
+          gcloud_service_key: ${{ secrets.GCR_KEY }}
+          project_id: ggl-cas-storage
+          image_name: cas-cif-schema
+          image_tag: latest,${{ github.sha }}
+          dockerfile: schema/Dockerfile
+          context: schema
