test: fix perl5lib path in actions

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,7 @@ jobs:
           path: |
             ~/.bashrc
             ~/.asdf
-            ~/.perl5
+            ~/work/_actions/shogo82148/actions-setup-perl/v1/scripts/lib
             ~/.cache/yarn
             ~/.cache/Cypress
             ./app/node_modules
@@ -31,6 +31,7 @@ jobs:
             ${{ runner.os }}-build-${{ env.cache-name }}-
       - run: make install_dev_tools
       - run: make stop_pg # cleanly stop the database, otherwise it will complain in the subsequent jobs
+      - run: which sqitch
       - run: yarn install --frozen-lockfile
         working-directory: ./app
 
@@ -46,7 +47,7 @@ jobs:
           path: |
             ~/.bashrc
             ~/.asdf
-            ~/.perl5
+            ~/work/_actions/shogo82148/actions-setup-perl/v1/scripts/lib
             ~/.cache/yarn
             ~/.cache/Cypress
             ./app/node_modules
@@ -65,7 +66,7 @@ jobs:
           path: |
             ~/.bashrc
             ~/.asdf
-            ~/.perl5
+            ~/work/_actions/shogo82148/actions-setup-perl/v1/scripts/lib
             ~/.cache/yarn
             ~/.cache/Cypress
             ./app/node_modules
@@ -89,7 +90,7 @@ jobs:
           path: |
             ~/.bashrc
             ~/.asdf
-            ~/.perl5
+            ~/work/_actions/shogo82148/actions-setup-perl/v1/scripts/lib
             ~/.cache/yarn
             ~/.cache/Cypress
             ./app/node_modules
