chore: add pre-commit

--- a/app/package.json
+++ b/app/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "format": "prettier --write .",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx .",
     "build:next": "next build",
     "dev": "nodemon",
