--- a/schema/Dockerfile
+++ b/schema/Dockerfile
@@ -26,3 +26,4 @@ RUN useradd -ms /bin/bash -d ${HOME} --uid ${USER_ID} schema_deployer
 RUN chown -R schema_deployer:0 ${HOME} && chmod -R g+rwX ${HOME}
 
 USER ${USER_ID}
+WORKDIR ${HOME}/schema
