--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,7 +19,7 @@ repos:
       - id: check-json
       - id: check-vcs-permalinks
       - id: check-yaml
-        exclude: ^helm/.*/templates/
+        exclude: ^chart/.*/templates/
       - id: end-of-file-fixer
         exclude: current_version\.txt
       - id: trailing-whitespace
