chore: use go comment for pragma allowlist

--- a/chart/cas-cif/templates/secret.yaml
+++ b/chart/cas-cif/templates/secret.yaml
@@ -5,9 +5,9 @@
 
 {{- $secret := (lookup "v1" "Secret" .Release.Namespace $secretName ) }}
 {{- if $secret }}
-{{- $sessionSecret = index $secret.data "session-secret" }} # pragma: allowlist secret
-{{- $dbAppPassword = index $secret.data "database-app-password" }} # pragma: allowlist secret
-{{- $dbOwnerPassword = index $secret.data "database-owner-password" }} # pragma: allowlist secret
+{{- $sessionSecret = index $secret.data "session-secret" }} {{/* # pragma: allowlist secret */}}
+{{- $dbAppPassword = index $secret.data "database-app-password" }} {{/* # pragma: allowlist secret */}}
+{{- $dbOwnerPassword = index $secret.data "database-owner-password" }} {{/* # pragma: allowlist secret */}}
 {{- end -}}
 
 apiVersion: v1
