--- a/app/package.json
+++ b/app/package.json
@@ -57,6 +57,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.16",
     "@graphile-contrib/pg-many-to-many": "^1.0.1",
+    "@rjsf/core": "^3.2.0",
     "body-parser": "^1.19.0",
     "bowser": "^2.11.0",
     "connect-pg-simple": "^7.0.0",
@@ -71,6 +72,7 @@
     "graphql": "^15.6.1",
     "graphql-upload": "^12.0.0",
     "helmet": "^4.6.0",
+    "json-schema": "^0.4.0",
     "lightship": "^6.7.2",
     "morgan": "^1.10.0",
     "next": "^11.1.2",
