--- a/app/package.json
+++ b/app/package.json
@@ -29,6 +29,7 @@
     "@typescript-eslint/parser": "^4.29.3",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-relay": "^12.0.0",
+    "babel-plugin-styled-components": "^1.13.3",
     "cypress": "^8.7.0",
     "eslint": "^7.2.0",
     "eslint-config-airbnb-typescript": "^14.0.1",
@@ -88,6 +89,7 @@
     "relay-nextjs": "^0.4.1",
     "relay-runtime": "^12.0.0",
     "relay-test-utils": "^12.0.0",
+    "styled-components": "^5.2.1",
     "webpack": "^5.58.2"
   }
 }
