--- a/app/package.json
+++ b/app/package.json
@@ -31,6 +31,7 @@
     "babel-plugin-relay": "^12.0.0",
     "babel-plugin-styled-components": "^1.13.3",
     "cypress": "^8.7.0",
+    "easygraphql-tester": "^6.0.1",
     "eslint": "^7.2.0",
     "eslint-config-airbnb-typescript": "^14.0.1",
     "eslint-config-next": "^11.1.2",
