chore: add checkout submodules to gh action tools job

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,6 +16,8 @@ jobs:
       - run: make stop_pg # cleanly stop the database, otherwise it will complain in the subsequent jobs
       - run: yarn install --frozen-lockfile
         working-directory: ./app
+        name: "Checkout Submodules"
+      - run: git submodule update --init
 
   yarn-test:
     needs: install-dev-tools
