chore: move checkout submodules into dev env setup

--- a/.github/actions/dev-env-setup/action.yml
+++ b/.github/actions/dev-env-setup/action.yml
@@ -37,3 +37,5 @@ runs:
           ~/.cache/Cypress
           ./app/node_modules
         key: ${{ runner.os }}-yarn-cache-${{ hashFiles('app/yarn.lock') }}
+    - name: Checkout Submodules
+      run: git submodule update --init
