chore: add bash shell to checkout submodule step

--- a/.github/actions/dev-env-setup/action.yml
+++ b/.github/actions/dev-env-setup/action.yml
@@ -39,3 +39,4 @@ runs:
         key: ${{ runner.os }}-yarn-cache-${{ hashFiles('app/yarn.lock') }}
     - name: Checkout Submodules
       run: git submodule update --init
+      shell: bash
