--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.15.8",
+    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.2",
     "@types/react-relay": "^11.0.2",
